objects/Exclusive_Material__c.object
<CustomObject>
    <description>This will serve as a junction object between Account and Product2.</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Exclusive_Material</relationshipLabel>
        <relationshipName>Exclusive_Material</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Model_Code__c</fullName>
        <formula>Product__r.Model_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Model Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Exclusive_Material</relationshipLabel>
        <relationshipName>Exclusive_Material</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SAP_Customer_ID__c</fullName>
        <formula>Account__r.SAP_Account_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAP Customer ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Exclusive_Material_Id__c</fullName>
        <externalId>true</externalId>
        <label>SAP Exclusive Material Id</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SAP_Material_Number__c</fullName>
        <formula>Product__r.SAP_Material_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAP Material Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isDeleted</label>
        <type>Checkbox</type>
    </fields>
    <label>Exclusive Material</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SAP_Exclusive_Material_Id__c</columns>
        <columns>Product__c</columns>
        <columns>Account__c</columns>
        <columns>isDeleted__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SAP_Material_Number__c</field>
            <operation>equals</operation>
            <value>83047960</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>EPR-{0000000}</displayFormat>
        <label>Exclusive Material Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exclusive Materials</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>